# HeppySitoUsato

./: .dockerignore  .env.example  .gitignore  ARCHITETTURA.md  CODEX_WORKFLOW.md  OBIETTIVI_E_ROADMAP.md  PROGRESS.md  RUOLI_E_STANDARD.md  STACK_E_TECNOLOGIE.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py
backend/app/models/: __init__.py  health.py
backend/app/network/: __init__.py  client.py  config.py  exceptions.py  models.py  proxy.py
backend/app/providers/: __init__.py  base.py  exceptions.py  models.py  registry.py
backend/app/providers/ebay/: __init__.py  adapter.py  auth.py  config.py  exceptions.py  factory.py  mapper.py  provider.py  schemas.py
backend/app/services/: __init__.py  aggregation.py  health.py  ranking.py
backend/app/workers/: __init__.py
backend/tests/: test_aggregation.py  test_app.py  test_ebay_provider.py  test_health.py  test_network.py  test_providers.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/proxy/: Dockerfile  proxy_placeholder.py
docker/worker/: Dockerfile  worker.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: main.js  style.css
frontend/src/api/: client.js
frontend/src/components/: AppShell.vue
frontend/src/composables/: useAppShell.js
frontend/src/models/: search-result.js
frontend/src/stores/: search-filters.js
frontend/src/utils/: query-client.js
frontend/src/views/: HomeView.vue
