[project]
name = "heppysitousato-backend"
version = "0.1.0"
description = "Backend FastAPI for the HeppySitoUsato aggregator."
readme = "README.md"
requires-python = ">=3.11,<4.0"
dynamic = ["dependencies"]
authors = [{ name = "Codex", email = "codex@example.com" }]

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.0"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
pydantic = "^2.11.0"
pydantic-settings = "^2.10.0"
httpx = "^0.28.0"
sqlalchemy = "^2.0.0"
alembic = "^1.16.0"
redis = "^6.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.1.0"
ruff = "^0.12.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
